--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.0.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0", features = ["fs-all", "path-all", "system-tray", "window-start-dragging"] }
+tauri = { version = "1.0.0", features = ["fs-all", "path-all", "system-tray", "window-close", "window-minimize", "window-start-dragging"] }
 
 [features]
 # by default Tauri runs in production mode
